# MacroFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app_entry.py  build_and_sign.sh  dmg_settings.py  entitlements.plist  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
assets/: AppIcon.icns
src/macroflow/: __init__.py  __main__.py  about_window.py  app.py  console_window.py  help_window.py  log_capture.py  macro.py  macro_editor.py  quad_preview.py  settings_window.py
src/macroflow/backends/: __init__.py  local_dimming.py  resolve.py  videohub.py
tests/: test_export_import_roundtrip.py  test_local_dimming.py  test_local_dimming_backend.py  test_macro.py  test_macro_fire.py  test_resolve_connect.py  test_resolve_pure.py  test_resolve_timeline.py  test_videohub_config.py  test_videohub_recall.py
